--- a/store/templates/store/productupdate.html
+++ b/store/templates/store/productupdate.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    Add Product
+    Update Product
 {% endblock title %}
 
 {% block content %}
@@ -72,6 +72,40 @@
                                 {{ form.vendor }}
                                 <div class="text-danger">{{ form.vendor.errors }}</div>
                             </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6 mb-3">
+                                <label for="{{ form.type_de_casier.id_for_label }}" class="form-label">
+                                    Type de Casier
+                                </label>
+                                {{ form.type_de_casier }}
+                                <div class="text-danger">{{ form.type_de_casier.errors }}</div>
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <label for="{{ form.total_bouteilles.id_for_label }}" class="form-label">
+                                    Total Bouteilles
+                                </label>
+                                {{ form.total_bouteilles }}
+                                <div class="text-danger">{{ form.total_bouteilles.errors }}</div>
+                            </div>
+                        </div>
+                        <!-- Exemple d'ajout de cases à cocher pour des options supplémentaires -->
+                        <!-- <div class="row">
+                            <div class="col mb-3">
+                                <label class="form-label">Options supplémentaires</label>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" id="option1">
+                                    <label class="form-check-label" for="option1">
+                                        Option 1
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" id="option2">
+                                    <label class="form-check-label" for="option2">
+                                        Option 2
+                                    </label>
+                                </div>
+                            </div> -->
                         </div>
                         <div class="form-group text-center">
                             <button class="btn btn-success btn-lg" type="submit">
